feito= menu e padronização header

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -28,6 +28,7 @@
         </div>
       </div>
       <!-- Fim do Header -->
+    <div id="mensagem"></div>
     <div class="container">
         <div class="cima">
     <div class="sala">
@@ -35,9 +36,9 @@
         <p>Monitore por cada quadrante:</p>
         <div class="btn">
     <button>Quadrante 1</button>
-    <button>Quadrante 1</button>
-    <button>Quadrante 1</button>
-    <button>Quadrante 1</button>
+    <button>Quadrante 2</button>
+    <button>Quadrante 3</button>
+    <button>Quadrante 4</button>
 </div>
     </div>
     <div class="kpei">
