subindo estilização do painel, falta alinhar o gráfico pizza

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sala B</title>
     <link rel="stylesheet" href="dashboard.css">
-    <script src="painelP.js"></script>
+    <script src="menuSalaB.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
