--- a/Dashboard/painel_principal.html
+++ b/Dashboard/painel_principal.html
@@ -7,6 +7,8 @@
     <title>Painel Principal</title>
     <link rel="stylesheet" href="dashboard.css">
     <!-- <script src="painelP.js"></script> -->
+    <script src="menuPainel.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 <body>
@@ -33,26 +35,26 @@
 
     <div class="text">
         <h2>Bem vindo(a) ao Painel Principal de Monitoramento</h2>
-        <span>Acompanhe as Médias de Temperatura e Umidade mensal no seu Museu. 
-            Para informações detalhas ou especificas, clique nos indicadores colorido ou acesse suas salas pelo menu!</span>
+        <span>Acompanhe as Médias de Temperatura e Umidade <span id="mensal"> mensal</span> no seu Museu. 
+            Para informações especificas, clique nos indicadores coloridos ou acesse suas salas pelo menu!</span>
     </div>
 
         <div class="leituras">
             <div class="l1">
-                <h3>Média de alertas críticos</h3>
+                <span id="title">Média de alertas críticos</span id="title">
                 <span>3%</span>
             </div>
             <div class="l2">
-                <h3>Média de leituras estáveis </h3>
+                <span id="title">Média de leituras estáveis </span id="title">
                 <span>85%</span>
             </div>
             <div class="l3">
-                <h3>Média de alertas de risco</h3>
+                <span id="title">Média de alertas de risco</span id="title">
                 <span>20%</span>
             </div>
         </div>
 <div class="caixa_alerta">
-    <h2>A taxa de alertas próximos a ultrapassar a temperatura ou umidade ideal da <span>Sala B</span> esteve acima do esperado este mês. 
+    <h2>A taxa de alertas próximos a ultrapassar a temperatura ou umidade ideal da <span id="salaB" onclick="verSala()">Sala B</span> esteve acima do esperado este mês. 
         Procure dar atenção especial para determinada sala. </h2>
 </div>
 
@@ -61,8 +63,29 @@
     <span>115</span>
 </div>
 
-<div class="chart">
+<div class="pizza">
+    <div>
+        <canvas id="grafico_pizza2"></canvas>
+      </div>              
+</div>
 
+</div>
+<div class="baixo">
+<div class="graficos">
+<div>
+    <canvas id="myChart1"></canvas>
+  </div>
+  <div>
+    <canvas id="myChart2"></canvas>
+  </div>
+  <div>
+    <canvas id="myChart3"></canvas>
+  </div>
+  <div>
+    <canvas id="myChart4"></canvas>
+  </div>
+</div>
+</div>
 </div>
 
 </div>
@@ -72,26 +95,32 @@
 </html>
 
 <script>
+    const pizza = document.getElementById('grafico_pizza2');
+  const bar1 = document.getElementById('myChart1');
+  const bar2 = document.getElementById('myChart2');
+  const bar3 = document.getElementById('myChart3');
+  const bar4 = document.getElementById('myChart4');
 
- //variaveis globais 
- var contador= 0;
-
- //funcoes do menu de nav
- function clickmenu() {
- contador+=1
- 
- if(contador>0){
- if(contador==1){
-     mensagem.innerHTML= `<ul class="menu_resp"> 
-         <li><a href=" ">Sala A</a></li>
-         <li><a href="dashboard.html">Sala B</a></li>
-         <li><a href=" ">Sala C</a></li>`
- 
- } else {
-     mensagem.innerHTML= ' ';
-     contador=0
- }
- } 
- } 
+new Chart(pizza, {
+  type: 'pie',
+  data: {
+    labels: [
+    'Red',
+    'Blue',
+    'Yellow'
+  ],
+  datasets: [{
+    label: 'My First Dataset',
+    data: [300, 50, 100],
+    //   borderWidth: 1,
+      backgroundColor: [
+      'rgb(255, 99, 132)',
+      'rgb(54, 162, 235)',
+      'rgb(255, 205, 86)'
+    ],    hoverOffset: 4
+    }]
+  },
+}
+);
 
 </script>
