--- a/Dashboard/painel_principal.html
+++ b/Dashboard/painel_principal.html
@@ -63,31 +63,32 @@
     <span>115</span>
 </div>
 
-<div class="pizza">
+<div class="graficoPizza">
+    <div class="pizza">
+        <div>
+            <canvas id="grafico_pizza2"></canvas>
+        </div>              
+    </div>
+
+    </div>
+    <div class="baixo">
+    <div class="graficos">
     <div>
-        <canvas id="grafico_pizza2"></canvas>
-      </div>              
-</div>
-
-</div>
-<div class="baixo">
-<div class="graficos">
-<div>
-    <canvas id="myChart1"></canvas>
-  </div>
-  <div>
-    <canvas id="myChart2"></canvas>
-  </div>
-  <div>
-    <canvas id="myChart3"></canvas>
-  </div>
-  <div>
-    <canvas id="myChart4"></canvas>
-  </div>
-</div>
-</div>
-</div>
-
+        <canvas id="myChart1"></canvas>
+    </div>
+    <div>
+        <canvas id="myChart2"></canvas>
+    </div>
+    <div>
+        <canvas id="myChart3"></canvas>
+    </div>
+    <div>
+        <canvas id="myChart4"></canvas>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 </div>
   
 
