falta ajustar a lagura e as margem

--- a/Dashboard/painel_principal.html
+++ b/Dashboard/painel_principal.html
@@ -70,7 +70,7 @@
         </div>              
     </div>
 
-    </div>
+    <!-- </div>
     <div class="baixo">
     <div class="graficos">
     <div>
@@ -83,13 +83,58 @@
         <canvas id="myChart3"></canvas>
     </div>
     <div>
-        <canvas id="myChart4"></canvas>
+        <canvas id="myChart4"></canvas> -->
     </div>
     </div>
     </div>
     </div>
     </div>
 </div>
+    <!-- fim do gráfico -->
+
+    <div class="metricas">
+        <div  class="caixaMetricaRed">
+            <h4>Crítico</h4>
+            <ul>
+                <li>10º C</li>
+                <li>44%</li>
+            </ul>
+        </div>
+
+        <div class="caixaMetricaYellow">
+            <h4>Alerta</h4>
+            <ul>
+                <li>12º - 14ºC</li>
+                <li>46% - 48%</li>
+            </ul>
+        </div>
+
+        <div class="caixaMetricaGreen">
+            <h4>Ideal</h4>
+            <ul>
+                <li>16º - 18ºC</li>
+                <li>50% - 55%</li>
+            </ul>
+        </div>
+
+        <div class="caixaMetricaYellow">
+            <h4>Alerta</h4>
+            <ul>
+                <li>20º - 22ºC</li>
+                <li>50% - 55%</li>
+            </ul>
+        </div>
+
+        <div class="caixaMetricaRed">
+            <h4>Crítico</h4>
+            <ul>
+                <li>24º C</li>
+                <li>61%</li>
+            </ul>
+        </div>
+    </div>
+
+
   
 
 </body>
