Criação e estilização da pagina dos quadrantes. Também adicionei o link paras os quadrantes nos botões da pagina das salas

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -35,10 +35,10 @@
         <h1>Sala B</h1>
         <p>Monitore por cada quadrante:</p>
         <div class="btn">
-    <button>Quadrante 1</button>
-    <button>Quadrante 2</button>
-    <button>Quadrante 3</button>
-    <button>Quadrante 4</button>
+          <button><a href='quadrante.html'>Quadrante 1</a> </button>
+          <button><a href='quadrante2.html'>Quadrante 2</a> </button>
+          <button><a href='quadrante3.html'>Quadrante 3</a> </button>
+          <button><a href='quadrante4.html'>Quadrante 4</a> </button>
 </div>
     </div>
     <div class="kpei">
