arrumei o espaçamento lateral do painel principal

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -12,6 +12,12 @@
 
 </head>
 <body>
+  <style>
+   span {
+    width: 80%;
+  }
+</style>
+
       <!-- Começo do Header -->
       <div class="header">
         <div class="container">
