ajuste nos menus

--- a/Dashboard/salaC.html
+++ b/Dashboard/salaC.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sala C</title>
     <link rel="stylesheet" href="dashboard.css">
-    <script src="menuSalaB.js"></script>
+    <script src="menuSalaC.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="cima">
     <div class="sala">
-        <h1>Sala B</h1>
+        <h1>Sala C</h1>
         <p>Monitore por cada quadrante:</p>
         <div class="btn">
           <button><a href='quadrante.html'>Quadrante 1</a> </button>
